--- a/app/globals.css
+++ b/app/globals.css
@@ -3,5 +3,27 @@
 @tailwind utilities;
 
 body {
-  @apply min-h-screen text-base leading-normal;
+  @apply min-h-screen bg-white text-base leading-normal;
+}
+
+.menuOpenMobile {
+  @apply absolute top-20 right-6 bg-white p-6 rounded-2xl w-44 flex flex-col gap-8 shadow-2xl;
+  max-height: max-content;
+  opacity: 1;
+  transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.menuDesktop {
+  @apply hidden sm:relative sm:top-0 sm:right-0 sm:p-0 sm:rounded-none sm:flex sm:flex-row sm:gap-8 sm:shadow-none;
+  max-height: none;
+  opacity: 1;
+  transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
+}
+
+.hideMenu {
+  @apply menuOpenMobile;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out;
 }
